Bug 362392 - Show Global Selection Mask not updating properly
Summary: Show Global Selection Mask not updating properly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 3.0 Beta
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-28 05:31 UTC by Andreas
Modified: 2016-05-02 13:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas 2016-04-28 05:31:49 UTC
Hi,
tested the latest krita 3.0 beta version from April 27th.

I am having an issue for some time already. When using toggling on the Global Selection Mask and using the layer transform tool(T) the selection does not update. It only updates if I hide and unhide the selection layer. 

Would be great if this gets fixed for the 3.0 stable release.
Comment 1 Scott Petrovic 2016-04-29 12:13:46 UTC
Can you explain this a little more in detail. I am not sure if you are saying the global selection mask has issues, or if this happens with any selection. Or does this problem only happen after you toggle the global selection mask?
Comment 2 Andreas 2016-04-29 19:45:22 UTC
Hi Scott,
well you can move selections only if you use global selection mask which then creates an extra layer for the selection. This is only appearing for selection layer. Any other layer updates directly when moving it with the move tool. Not so the selection layer.
You need to hide unhide it then you see its actual position.
Comment 3 wolthera 2016-05-01 11:30:20 UTC
I cant reproduce this on master on ubuntu 16.04

However, I did get this crash: https://bugs.kde.org/show_bug.cgi?id=362539
Comment 4 Dmitry Kazakov 2016-05-02 13:16:27 UTC
Git commit c07d3b7400248088f5b885b0cbb22811559d5ad4 by Dmitry Kazakov.
Committed on 02/05/2016 at 13:16.
Pushed by dkazakov into branch 'master'.

Make the timer in KisSignalCompressor be a part of QObject hierarchy

The timer should be able to move to another thread together with
his parent signal compressor.
Fixes T2378

M  +18   -16   libs/image/kis_signal_compressor.cpp
M  +1    -1    libs/image/kis_signal_compressor.h

http://commits.kde.org/krita/c07d3b7400248088f5b885b0cbb22811559d5ad4