Make the timer in KisSignalCompressor be a part of QObject hierarchy

The timer should be able to move to another thread together with
his parent signal compressor.

BUG:362392
Fixes T2378